// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotAuthorized component should apply custom styles 1`] = `
<div
  class="pf-v5-c-empty-state something"
>
  <div
    class="pf-v5-c-empty-state__content"
  >
    <div
      class="pf-v5-c-empty-state__header"
    >
      <div
        class="pf-v5-c-empty-state__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 448 512"
          width="1em"
        >
          <path
            d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
          />
        </svg>
      </div>
      <div
        class="pf-v5-c-empty-state__title"
      >
        <h5
          class="pf-v5-c-empty-state__title-text"
        >
          You do not have access to Foo
        </h5>
      </div>
    </div>
    <div
      class="pf-v5-c-empty-state__body"
    >
      Contact your system administrator(s) for more information.
    </div>
    <div
      class="pf-v5-c-empty-state__footer"
    >
      <a
        aria-disabled="false"
        class="pf-v5-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-2"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        href="."
      >
        Go to landing page
      </a>
      <div
        class="pf-v5-c-empty-state__actions"
      />
    </div>
  </div>
</div>
`;

exports[`NotAuthorized component should not show buttons 1`] = `
<div
  class="pf-v5-c-empty-state"
>
  <div
    class="pf-v5-c-empty-state__content"
  >
    <div
      class="pf-v5-c-empty-state__header"
    >
      <div
        class="pf-v5-c-empty-state__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 448 512"
          width="1em"
        >
          <path
            d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
          />
        </svg>
      </div>
      <div
        class="pf-v5-c-empty-state__title"
      >
        <h5
          class="pf-v5-c-empty-state__title-text"
        >
          You do not have access to Foo
        </h5>
      </div>
    </div>
    <div
      class="pf-v5-c-empty-state__body"
    >
      Contact your system administrator(s) for more information.
    </div>
    <div
      class="pf-v5-c-empty-state__footer"
    >
      <div
        class="pf-v5-c-empty-state__actions"
      />
    </div>
  </div>
</div>
`;

exports[`NotAuthorized component should render 1`] = `
<div
  class="pf-v5-c-empty-state"
>
  <div
    class="pf-v5-c-empty-state__content"
  >
    <div
      class="pf-v5-c-empty-state__header"
    >
      <div
        class="pf-v5-c-empty-state__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 448 512"
          width="1em"
        >
          <path
            d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
          />
        </svg>
      </div>
      <div
        class="pf-v5-c-empty-state__title"
      >
        <h5
          class="pf-v5-c-empty-state__title-text"
        >
          You do not have access to Foo
        </h5>
      </div>
    </div>
    <div
      class="pf-v5-c-empty-state__body"
    >
      Contact your system administrator(s) for more information.
    </div>
    <div
      class="pf-v5-c-empty-state__footer"
    >
      <a
        aria-disabled="false"
        class="pf-v5-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-1"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        href="."
      >
        Go to landing page
      </a>
      <div
        class="pf-v5-c-empty-state__actions"
      />
    </div>
  </div>
</div>
`;

exports[`NotAuthorized component should show custom actions 1`] = `
<div
  class="pf-v5-c-empty-state"
>
  <div
    class="pf-v5-c-empty-state__content"
  >
    <div
      class="pf-v5-c-empty-state__header"
    >
      <div
        class="pf-v5-c-empty-state__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 448 512"
          width="1em"
        >
          <path
            d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
          />
        </svg>
      </div>
      <div
        class="pf-v5-c-empty-state__title"
      >
        <h5
          class="pf-v5-c-empty-state__title-text"
        >
          You do not have access to Foo
        </h5>
      </div>
    </div>
    <div
      class="pf-v5-c-empty-state__body"
    >
      Contact your system administrator(s) for more information.
    </div>
    <div
      class="pf-v5-c-empty-state__footer"
    >
      <div
        class="pf-v5-c-empty-state__actions"
      >
        <button
          id="action-one"
        >
          1
        </button>
      </div>
      <div
        class="pf-v5-c-empty-state__actions"
      >
        <div
          class="pf-v5-c-empty-state__actions"
        >
          <button
            id="action-one"
          >
            2
          </button>
          <button
            id="action-one"
          >
            3
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotAuthorized component should show custom description 1`] = `
<div
  class="pf-v5-c-empty-state"
>
  <div
    class="pf-v5-c-empty-state__content"
  >
    <div
      class="pf-v5-c-empty-state__header"
    >
      <div
        class="pf-v5-c-empty-state__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 448 512"
          width="1em"
        >
          <path
            d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
          />
        </svg>
      </div>
      <div
        class="pf-v5-c-empty-state__title"
      >
        <h5
          class="pf-v5-c-empty-state__title-text"
        >
          You do not have access to Foo
        </h5>
      </div>
    </div>
    <div
      class="pf-v5-c-empty-state__body"
    >
      Some text
    </div>
    <div
      class="pf-v5-c-empty-state__footer"
    >
      <a
        aria-disabled="false"
        class="pf-v5-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-4"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        href="."
      >
        Go to landing page
      </a>
      <div
        class="pf-v5-c-empty-state__actions"
      />
    </div>
  </div>
</div>
`;

exports[`NotAuthorized component should show custom title 1`] = `
<div
  class="pf-v5-c-empty-state"
>
  <div
    class="pf-v5-c-empty-state__content"
  >
    <div
      class="pf-v5-c-empty-state__header"
    >
      <div
        class="pf-v5-c-empty-state__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 448 512"
          width="1em"
        >
          <path
            d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
          />
        </svg>
      </div>
      <div
        class="pf-v5-c-empty-state__title"
      >
        <h5
          class="pf-v5-c-empty-state__title-text"
        >
          Custom title
        </h5>
      </div>
    </div>
    <div
      class="pf-v5-c-empty-state__body"
    >
      Contact your system administrator(s) for more information.
    </div>
    <div
      class="pf-v5-c-empty-state__footer"
    >
      <a
        aria-disabled="false"
        class="pf-v5-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-5"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        href="."
      >
        Go to landing page
      </a>
      <div
        class="pf-v5-c-empty-state__actions"
      />
    </div>
  </div>
</div>
`;

exports[`NotAuthorized component should use custom icon 1`] = `
<div
  class="pf-v5-c-empty-state"
>
  <div
    class="pf-v5-c-empty-state__content"
  >
    <div
      class="pf-v5-c-empty-state__header"
    >
      <div
        class="pf-v5-c-empty-state__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
          />
        </svg>
      </div>
      <div
        class="pf-v5-c-empty-state__title"
      >
        <h5
          class="pf-v5-c-empty-state__title-text"
        >
          You do not have access to Foo
        </h5>
      </div>
    </div>
    <div
      class="pf-v5-c-empty-state__body"
    >
      Contact your system administrator(s) for more information.
    </div>
    <div
      class="pf-v5-c-empty-state__footer"
    >
      <a
        aria-disabled="false"
        class="pf-v5-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-3"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe="true"
        href="."
      >
        Go to landing page
      </a>
      <div
        class="pf-v5-c-empty-state__actions"
      />
    </div>
  </div>
</div>
`;
